--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -368,6 +368,29 @@ body.page-index {
   }
 }
 
+.home section.labs {
+  padding: 60px 0;
+  .item, .sizer {
+    width: 33%;
+    padding: 0 15px;
+    margin-bottom: 15px;
+    .preview {
+      padding: 30px;
+      background-color: #fff;
+      border: 1px solid #eee;
+      p {
+        font-size: 16px;
+        line-height: 22px;
+        margin-bottom: 0;
+      }
+      img {
+        display: block;
+        margin: auto;
+      }
+    }
+  }
+}
+
 .home section.contact {
   padding: 60px 0;
   form {
