--- a/src/_includes/home/open-source.html
+++ b/src/_includes/home/open-source.html
@@ -1,6 +1,137 @@
 <div class="container">
-  <br/><br/><br/>
-  <div class="row">
+    <div class="grid">
+      <div class="sizer"></div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/arduino-board.jpg" />
+          <h3>Arduino Hue Light radar</h3>
+          <p>Lights that turn on when you enter the room</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/blog/react-native-smart-mirror-lab/preview.jpg" />
+          <h3>Digital smart mirror</h3>
+          <p>A smart mirror for your home</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/fluid-labels.png" />
+          <h3>Fluid labels</h3>
+          <p>Placeholder text that slides in as an overlay when the user beings typing</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/gulp.png" />
+          <h3>gulp-ng-config</h3>
+          <p>A gulp plugin for generating Angular constants based on environment configurations</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/chromecast.png" />
+          <h3>titanium-chromecast</h3>
+          <p>A native titanium module for integrating Titanium Appcelerator and Chromecast</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/translation.png" />
+          <h3>angular-translate-once</h3>
+          <p>An Angular component to optimize angular-translate to allow for one-time bindings</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/bernie.png" />
+          <h3>Sites for Bernie</h3>
+          <p>A WordPress Multisite system allowing for Bernie Sanders supporters to create their own organization websites</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/butler.png" />
+          <h3>Butler</h3>
+          <p>A Slack bot for organizaing Coders for Sanders teams</p>
+        </div>
+      </div>
+    </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/street-view-traveler.png" />
+          <h3>Street View Traveler</h3>
+          <p>Select two locations and travel between them in Google Street View</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/word-search.png" />
+          <h3>Word Search</h3>
+          <p>A simple game of word search</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/twitter-digits.png" />
+          <h3>angular-digits</h3>
+          <p>An AngularJS component for Twitter's Fabric Digits</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/github-notifier.png" />
+          <h3>Github Notifier</h3>
+          <p>A chrome extension for receiving Github notifications</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/popper.png" />
+          <h3>Popper</h3>
+          <p>A jQuery plugin for creating flyout buttons</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/earthquakes.png" />
+          <h3>Live Earthquake Visualization</h3>
+          <p>See where earthquakes have occurred throughout the world</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/snake.png" />
+          <h3>Snake</h3>
+          <p>A simple game of snake</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/react-native-fifteen-puzzle.png" />
+          <h3>React Native Fifteen Puzzle</h3>
+          <p>Exploring React Native with a Fifteen Puzzle</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/spotify.png" />
+          <h3>Spotify Event Finder</h3>
+          <p>Finds upcoming concerts you would be interested in based on your music trends</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/craigslist.png" />
+          <h3>Craigslist Job Searcher</h3>
+          <p>Finds web contract listings around the country listed on Craigslist</p>
+        </div>
+      </div>
+</div>
+
+
+<!--
     <div class="col-sm-6" style="text-align: center;">
       <img src="http://www.proxygear.com/images/posts/angularjs-logo.png" style="max-width: 50%; display: inline-block;"/>
     </div>
@@ -10,10 +141,10 @@
   </div>
   <div class="row">
     <div class="col-sm-6" style="text-align: center">
-      <h2>gulp-ng-config</h2>
+      <h3>gulp-ng-config</h3>
     </div>
     <div class="col-sm-6" style="text-align: center">
-      <h2>arduino node sreams</h2>
+      <h3>arduino node sreams</h3>
     </div>
   </div>
   <br/><Br/><br/>
@@ -27,10 +158,11 @@
   </div>
   <div class="row">
     <div class="col-sm-6" style="text-align: center">
-      <h2>ti.OkHTTP</h2>
+      <h3>ti.OkHTTP</h3>
     </div>
     <div class="col-sm-6" style="text-align: center">
-      <h2>ti.Chromecast</h2>
+      <h3>ti.Chromecast</h3>
     </div>
   </div>
 </div>
+-->
