--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -373,11 +373,17 @@ body.page-index {
   .item, .sizer {
     width: 33%;
     padding: 0 15px;
-    margin-bottom: 15px;
+    margin-bottom: 30px;
     .preview {
       padding: 30px;
       background-color: #fff;
       border: 1px solid #eee;
+
+      h3 {
+        border-top: 1px solid #eee;
+        margin: 20px -30px 0;
+        padding: 20px 30px 0;
+      }
       p {
         font-size: 16px;
         line-height: 22px;
@@ -412,8 +418,9 @@ body.page-index {
       margin-top: 26px;
 
       .social {
-        font-size: 30px;
-        margin-bottom: 26px;
+        font-size: 24px;
+        margin-bottom: 30px;
+        font-weight: 100;
         .clearfix;
         i {
           font-size: 46px;
@@ -432,6 +439,7 @@ body.page-index {
         a {
           float: left;
           color: #6a6a6a;
+          margin-top: 5px;
         }
       }
     }
