--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -13,26 +13,35 @@
             class="handle">@atticoos</a>
         </div>
       </div>
-      <div class="site-nav">
-        <nav>
-          <a href="/#" {% if current[1] == 'index' %} class="active" {% endif %}>Home</a>
-          <a href="/#portfolio">Portfolio</a>
-          <a href="/#labs">Labs</a>
-          <a href="/blog" {% if (current[1] == 'blog') %} class="active" {% endif %}>Blog</a>
-        </nav>
+      <div class="right">
+        <div class="row">
+          <div class="site-nav">
+            <nav>
+              <a href="/#" {% if current[1] == 'index' %} class="active" {% endif %}>Home</a>
+              <a href="/#portfolio">Portfolio</a>
+              <a href="/#labs">Labs</a>
+              <a href="/blog" {% if (current[1] == 'blog') %} class="active" {% endif %}>Blog</a>
+            </nav>
+          </div>
+          <div class="off-links">
+            <a href="https://www.linkedin.com/in/atticuswhite"
+              title="Connect with Atticus White on LinkedIn"
+              target="_blank"><i class="fa fa-linkedin"></i></a>
+            <a href="https://twitter.com/atticoos"
+              title="Follow Atticus on Twitter"
+              target="_blank"><i class="fa fa-twitter"></i></a>
+            <a href="https://github.com/ajwhite"
+              title="Browse open source projects by Atticus White on Github"
+              target="_blank"><i class="fa fa-github"></i></a>
+            <a href="#" title="Get in contact with Atticus"><i class="fa fa-envelope"></i></a>
+          </div>
+        </div>
       </div>
-      <div class="off-links">
-        <a href="https://www.linkedin.com/in/atticuswhite"
-          title="Connect with Atticus White on LinkedIn"
-          target="_blank"><i class="fa fa-linkedin"></i></a>
-        <a href="https://twitter.com/atticoos"
-          title="Follow Atticus on Twitter"
-          target="_blank"><i class="fa fa-twitter"></i></a>
-        <a href="https://github.com/ajwhite"
-          title="Browse open source projects by Atticus White on Github"
-          target="_blank"><i class="fa fa-github"></i></a>
-        <a href="#" title="Get in contact with Atticus"><i class="fa fa-envelope"></i></a>
-      </div>
+      <a href="#" class="amburgah">
+        <span class="bar-1"></span>
+        <span class="bar-2"></span>
+        <span class="bar-3"></span>
+      </a>
     </div>
   </div>
 </header>
