--- a/src/_assets/less/site.less
+++ b/src/_assets/less/site.less
@@ -84,6 +84,41 @@ img {
     .make-xs-column(9);
     @media @small {
       display: none;
+      position: absolute;
+      top: 70px;
+      left: 0;
+      right: 0;
+      margin: 0;
+      padding: 0;
+      background-color: rgba(0,0,0,0.85);
+      width: 100%;
+      .row {
+        margin: 0;
+        padding: 0;
+      }
+      .site-nav {
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        border-top: 2px solid #31a2d4;
+        a {
+          &:after {
+            display: none !important;
+          }
+          display: block;
+        }
+      }
+      .off-links {
+        width: 100%;
+        margin: 0;
+        padding: 0 0 10px 0;
+        text-align: center;
+        a {
+          display: inline;
+          text-align: left;
+          margin: 0 10px;
+        }
+      }
     }
   }
   .amburgah {
@@ -99,23 +134,6 @@ img {
       background-color:#fff;
       margin-bottom: 5px;
       transition: all 250ms;
-    }
-    &.active {
-      .bar-1 {
-        top: 6px;
-        transform: rotate(45deg);
-        -ms-transform: rotate(45deg);
-        -webkit-transform: rotate(45deg);
-      }
-      .bar-2 {
-        opacity: 0;
-      }
-      .bar-3 {
-        top: -8px;
-        transform: rotate(-45deg);
-        -ms-transform: rotate(-45deg);
-        -webkit-transform: rotate(-45deg);
-      }
     }
     @media @small {
       display: block;
@@ -179,6 +197,29 @@ img {
         }
       }
     }
+  }
+}
+
+.site-header.active {
+  .amburgah {
+    .bar-1 {
+      top: 6px;
+      transform: rotate(45deg);
+      -ms-transform: rotate(45deg);
+      -webkit-transform: rotate(45deg);
+    }
+    .bar-2 {
+      opacity: 0;
+    }
+    .bar-3 {
+      top: -8px;
+      transform: rotate(-45deg);
+      -ms-transform: rotate(-45deg);
+      -webkit-transform: rotate(-45deg);
+    }
+  }
+  .right {
+    display: block;
   }
 }
 
