:fire: circle animations

--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -159,6 +159,12 @@ body.page-index {
         }
       }
 
+      .skills,
+      .work {
+        .hidden-xs();
+        .hidden-sm();
+      }
+
       h2 {
         text-align: center;
         margin-top: 30px;
@@ -453,7 +459,7 @@ body.page-index {
 }
 
 
-
+/*
 @media @no-mobile {
   .home section.me .container .circles.animated {
     height: 325px;
@@ -500,6 +506,7 @@ body.page-index {
   }
 
 }
+*/
 
 #dots {
   position: absolute;
