--- a/src/_assets/less/site.less
+++ b/src/_assets/less/site.less
@@ -257,6 +257,9 @@ img {
       border-radius: 50%;
       overflow: hidden;
     }
+    @media @mobile {
+      padding-top: 20px;
+    }
   }
 }
 
