--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -114,6 +114,12 @@ body.page-index {
       margin: auto;
     }
 
+    @media @mobile {
+      h1 {
+        font-size: 38px;
+      }
+    }
+
 
     .circles {
       position: relative;
