--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -181,6 +181,8 @@ body.page-index {
       h2 {
         text-align: center;
         margin-top: 30px;
+        .hidden-xs();
+        .hidden-sm();
       }
 
       .skills {
