configurable env stuff

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -5,9 +5,9 @@
 
     <div class="row">
       <div class="site-title">
-        <a href="/" class="logo"></a>
+        <a href="/" class="logo" title="Home"></a>
         <div class="aside">
-          <a href="/" class="name">Atticus White</a>
+          <a href="/" class="name" title="Home">Atticus White</a>
           <a href="https://twitter.com/atticoos"
             title="See what Atticus tweets"
             class="handle">@atticoos</a>
