--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -15,7 +15,7 @@
         </ul>
       </div>
       <div class="face">
-        <img src="/dist/images/me2.jpeg" />
+        <img src="/dist/images/me2.jpeg" alt="Atticus White" />
       </div>
     </div>
   </div>
