--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -17,7 +17,7 @@
         <div class="row">
           <div class="site-nav">
             <nav>
-              <a href="/#" class="home {% if current[1] == 'index' %}active{% endif %}">Home</a>
+              <a href="/" class="home {% if current[1] == 'index' %}active{% endif %}">Home</a>
               <a href="/#portfolio" class="portfolio">Portfolio</a>
               <a href="/#labs" class="labs">Labs</a>
               <a href="/blog" {% if (current[1] == 'blog') %} class="active" {% endif %}>Blog</a>
@@ -33,11 +33,11 @@
             <a href="https://github.com/ajwhite"
               title="Browse open source projects by Atticus White on Github"
               target="_blank"><i class="fa fa-github"></i></a>
-            <a href="#" title="Get in contact with Atticus"><i class="fa fa-envelope"></i></a>
+            <a href="/#contact" title="Get in contact with Atticus"><i class="fa fa-envelope"></i></a>
           </div>
         </div>
       </div>
-      <a href="#" class="amburgah">
+      <a href="#amburgah" id="amburgah" class="amburgah">
         <span class="bar-1"></span>
         <span class="bar-2"></span>
         <span class="bar-3"></span>
