--- a/src/_includes/home/open-source.html
+++ b/src/_includes/home/open-source.html
@@ -3,126 +3,126 @@
       <div class="sizer"></div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/labs/arduino-board.jpg" />
+          <img src="/dist/images/labs/arduino-board.jpg" alt="example" />
           <h3>Arduino Hue Light radar</h3>
           <p>Lights that turn on when you enter the room</p>
         </div>
       </div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/blog/react-native-smart-mirror-lab/preview.jpg" />
+          <img src="/dist/images/blog/react-native-smart-mirror-lab/preview.jpg" alt="example" />
           <h3>Digital smart mirror</h3>
           <p>A smart mirror for your home</p>
         </div>
       </div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/labs/fluid-labels.png" />
+          <img src="/dist/images/labs/fluid-labels.png" alt="example" />
           <h3>Fluid labels</h3>
           <p>Placeholder text that slides in as an overlay when the user beings typing</p>
         </div>
       </div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/labs/gulp.png" />
+          <img src="/dist/images/labs/gulp.png" alt="example" />
           <h3>gulp-ng-config</h3>
           <p>A gulp plugin for generating Angular constants based on environment configurations</p>
         </div>
       </div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/labs/chromecast.png" />
+          <img src="/dist/images/labs/chromecast.png" alt="example" />
           <h3>titanium-chromecast</h3>
           <p>A native titanium module for integrating Titanium Appcelerator and Chromecast</p>
         </div>
       </div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/labs/translation.png" />
+          <img src="/dist/images/labs/translation.png" alt="example" />
           <h3>angular-translate-once</h3>
           <p>An Angular component to optimize angular-translate to allow for one-time bindings</p>
         </div>
       </div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/labs/bernie.png" />
+          <img src="/dist/images/labs/bernie.png" alt="example" />
           <h3>Sites for Bernie</h3>
           <p>A WordPress Multisite system allowing for Bernie Sanders supporters to create their own organization websites</p>
         </div>
       </div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/labs/butler.png" />
+          <img src="/dist/images/labs/butler.png" alt="example" />
           <h3>Butler</h3>
           <p>A Slack bot for organizaing Coders for Sanders teams</p>
         </div>
       </div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/labs/street-view-traveler.png" />
+          <img src="/dist/images/labs/street-view-traveler.png" alt="example" />
           <h3>Street View Traveler</h3>
           <p>Select two locations and travel between them in Google Street View</p>
         </div>
       </div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/labs/word-search.png" />
+          <img src="/dist/images/labs/word-search.png" alt="example" />
           <h3>Word Search</h3>
           <p>A simple game of word search</p>
         </div>
       </div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/labs/twitter-digits.png" />
+          <img src="/dist/images/labs/twitter-digits.png" alt="example" />
           <h3>angular-digits</h3>
           <p>An AngularJS component for Twitter's Fabric Digits</p>
         </div>
       </div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/labs/github-notifier.png" />
+          <img src="/dist/images/labs/github-notifier.png" alt="example" />
           <h3>Github Notifier</h3>
           <p>A chrome extension for receiving Github notifications</p>
         </div>
       </div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/labs/popper.png" />
+          <img src="/dist/images/labs/popper.png" alt="example" />
           <h3>Popper</h3>
           <p>A jQuery plugin for creating flyout buttons</p>
         </div>
       </div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/labs/earthquakes.png" />
+          <img src="/dist/images/labs/earthquakes.png" alt="example" />
           <h3>Live Earthquake Visualization</h3>
           <p>See where earthquakes have occurred throughout the world</p>
         </div>
       </div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/labs/snake.png" />
+          <img src="/dist/images/labs/snake.png" alt="example" />
           <h3>Snake</h3>
           <p>A simple game of snake</p>
         </div>
       </div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/labs/react-native-fifteen-puzzle.png" />
+          <img src="/dist/images/labs/react-native-fifteen-puzzle.png" alt="example" />
           <h3>React Native Fifteen Puzzle</h3>
           <p>Exploring React Native with a Fifteen Puzzle</p>
         </div>
       </div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/labs/spotify.png" />
+          <img src="/dist/images/labs/spotify.png" alt="example" />
           <h3>Spotify Event Finder</h3>
           <p>Finds upcoming concerts you would be interested in based on your music trends</p>
         </div>
       </div>
       <div class="item">
         <div class="preview">
-          <img src="/dist/images/labs/craigslist.png" />
+          <img src="/dist/images/labs/craigslist.png" alt="example" />
           <h3>Craigslist Job Searcher</h3>
           <p>Finds web contract listings around the country listed on Craigslist</p>
         </div>
