--- a/src/_includes/home/skills.html
+++ b/src/_includes/home/skills.html
@@ -7,7 +7,7 @@
   <div class="skill">
     <div>
       <div class="icon" style="background-color:#9c120f;">
-        <img src="/dist/images/icons/angularjs.png" />
+        <img src="/dist/images/icons/angularjs.png" alt="AngularJS" />
       </div>
       <h2>AngularJS</h2>
       <p>Powerful and advanced front end technologies and best practices.</p>
@@ -17,7 +17,7 @@
   <div class="skill">
     <div>
       <div class="icon" style="background-color:#5e73b5;">
-        <img src="/dist/images/icons/php.png" />
+        <img src="/dist/images/icons/php.png" alt="PHP" />
       </div>
       <h2>PHP</h2>
       <p>Frameworks, such as Laravel, to empower a capable MVC architecture.</p>
@@ -27,7 +27,7 @@
   <div class="skill">
     <div>
       <div class="icon" style="background-color:#e04f14;">
-        <img src="/dist/images/icons/html5.svg" height="84" />
+        <img src="/dist/images/icons/html5.svg" height="84" alt="HTML5" />
       </div>
       <h2>HTML5/CSS3/JS</h2>
       <p>Modern UI/UX, with a deep understanding of SASS and DOM manipulation and data binding.</p>
@@ -44,7 +44,7 @@
   <div class="skill">
     <div>
       <div class="icon" style="background-color:#f07c00;">
-        <img src="/dist/images/icons/magento.svg" />
+        <img src="/dist/images/icons/magento.svg" alt="Magento" />
       </div>
       <h2>Magento</h2>
       <p>For large stores or store owners with specific business needs.</p>
@@ -55,7 +55,7 @@
   <div class="skill">
     <div>
       <div class="icon" style="background-color:#146ec0;">
-        <img src="/dist/images/icons/wordpress.png" />
+        <img src="/dist/images/icons/wordpress.png" alt="WordPress" />
       </div>
       <h2>Wordpress</h2>
       <p>Seamless content management. Keep your site up to date without ever touching code.</p>
@@ -65,7 +65,7 @@
   <div class="skill">
     <div>
       <div class="icon" style="background-color:#a9cc62;">
-        <img src="/dist/images/icons/shopify.png" height="84" />
+        <img src="/dist/images/icons/shopify.png" height="84" alt="Shopify" />
       </div>
       <h2>Shopify</h2>
       <p>For stores with a simple production collection and simple business needs</p>
@@ -81,7 +81,7 @@
   <div class="skill">
     <div>
       <div class="icon" style="background-color:#000000;">
-        <img src="/dist/images/icons/ios.png" />
+        <img src="/dist/images/icons/ios.png" alt="iOS" />
       </div>
       <h2>iOS</h2>
       <p>iPhone and iPad development, from games to data-rich applications.</p>
@@ -92,7 +92,7 @@
   <div class="skill">
     <div>
       <div class="icon" style="background-color:#489ff2;">
-        <img src="/dist/images/icons/metro.png" />
+        <img src="/dist/images/icons/metro.png" alt="Win Metro" />
       </div>
       <h2>Metro</h2>
       <p>Windows Phone and Windows Tablet development</p>
@@ -102,7 +102,7 @@
   <div class="skill">
     <div>
       <div class="icon" style="background-color:#9cc00f;">
-        <img src="/dist/images/icons/android.png" height="84" />
+        <img src="/dist/images/icons/android.png" height="84" alt="Android" />
       </div>
       <h2>Android</h2>
       <p>Android development, from games to data-rich applications.</p>
@@ -120,7 +120,7 @@
   <div class="skill">
     <div>
       <div class="icon" style="background-color:#e48632;">
-        <img src="/dist/images/icons/grunt.png" />
+        <img src="/dist/images/icons/grunt.png" alt="Grunt" />
       </div>
       <h2>Grunt</h2>
       <p>Build & Automation. Clean compiles, magnification, preprocessing, test running.</p>
@@ -131,7 +131,7 @@
   <div class="skill">
     <div>
       <div class="icon" style="background-color:#ffcc2f;">
-        <img src="/dist/images/icons/bower.png" />
+        <img src="/dist/images/icons/bower.png" alt="Bower" />
       </div>
       <h2>Bower</h2>
       <p>Dependency management for dynamic loading applications.</p>
@@ -141,7 +141,7 @@
   <div class="skill">
     <div>
       <div class="icon" style="background-color:#99be4f;">
-        <img src="/dist/images/icons/node.png" height="84" />
+        <img src="/dist/images/icons/node.png" height="84" alt="NodeJS" />
       </div>
       <h2>NodeJS</h2>
       <p>NPM &amp; NodeJS development for applications and custom tasks.</p>
