add item to labs

--- a/src/_includes/home/open-source.html
+++ b/src/_includes/home/open-source.html
@@ -38,6 +38,13 @@
       </div>
       <div class="item">
         <div class="preview">
+          <img src="/dist/images/labs/jquery-stockquotes.png" alt="example" />
+          <h3>jQuery Stock Quotes</h3>
+          <p>A jQuery plugin to display stock quotes for symbols.</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
           <img src="/dist/images/labs/translation.png" alt="example" />
           <h3>angular-translate-once</h3>
           <p>An Angular component to optimize angular-translate to allow for one-time bindings</p>
