--- a/src/_assets/less/blog.less
+++ b/src/_assets/less/blog.less
@@ -42,6 +42,18 @@
       display: block;
     }
 
+    code {
+      padding: 2px 4px;
+      border-radius: 2px;
+      background-color: #ececec;
+    }
+
+    .highlight code {
+      background-color: inherit;
+      padding: 0;
+      border-radius: 0;
+    }
+
     img {
       max-width: 80%;
       display: block;
