jekyll-environment-variables open source project

--- a/src/_includes/home/open-source.html
+++ b/src/_includes/home/open-source.html
@@ -52,6 +52,13 @@
       </div>
       <div class="item">
         <div class="preview">
+          <img src="/dist/images/labs/jekyll-environment-variables.png" alt="Jekyll environment variables" />
+          <h3>jekyll-environment-variables</h3>
+          <p>Access your environt variables in your liquid templates for your Jekyll site</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
           <img src="/dist/images/labs/bernie.png" alt="example" />
           <h3>Sites for Bernie</h3>
           <p>A WordPress Multisite system allowing for Bernie Sanders supporters to create their own organization websites</p>
