open source project updates

--- a/src/_includes/home/open-source.html
+++ b/src/_includes/home/open-source.html
@@ -17,6 +17,13 @@
       </div>
       <div class="item">
         <div class="preview">
+          <img src="/dist/images/labs/react-native-redux-calculator.png" alt="React Native + Redux Calculator" />
+          <h3>React Native + Redux Calculator</h3>
+          <p>A history-tracking calculator built with React Native and Redux predictable state containers</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
           <img src="/dist/images/labs/fluid-labels.png" alt="example" />
           <h3>Fluid labels</h3>
           <p>Placeholder text that slides in as an overlay when the user beings typing</p>
@@ -41,6 +48,20 @@
           <img src="/dist/images/labs/jquery-stockquotes.png" alt="example" />
           <h3>jQuery Stock Quotes</h3>
           <p>A jQuery plugin to display stock quotes for symbols.</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/react-native-redux-todo-list.png" alt="React Native + Redux Todo List" />
+          <h3>React Native + Redux Todo List</h3>
+          <p>A basic todo list built with React Native and Redux predictable state containers</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/labs/hearthstone-tracker.png" alt="React + Electron Hearthstone Tracker" />
+          <h3>Hearthstone Card Tracker w/ Electron + React</h3>
+          <p>A Hearthstone card tracker with Electron and React</p>
         </div>
       </div>
       <div class="item">
