latest open source projects

--- a/src/_includes/home/open-source.html
+++ b/src/_includes/home/open-source.html
@@ -52,6 +52,13 @@
       </div>
       <div class="item">
         <div class="preview">
+          <img src="/dist/images/tags/react.jpg" alt="react-native-device-battery" />
+          <h3>react-native-device-battery</h3>
+          <p>An npm module for React Native to monitor battery state changes</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
           <img src="/dist/images/labs/react-native-redux-todo-list.png" alt="React Native + Redux Todo List" />
           <h3>React Native + Redux Todo List</h3>
           <p>A basic todo list built with React Native and Redux predictable state containers</p>
@@ -90,6 +97,13 @@
           <img src="/dist/images/labs/butler.png" alt="example" />
           <h3>Butler</h3>
           <p>A Slack bot for organizaing Coders for Sanders teams</p>
+        </div>
+      </div>
+      <div class="item">
+        <div class="preview">
+          <img src="/dist/images/tags/react.jpg" alt="react-native-device-battery" />
+          <h3>react-native-android-shared-preference</h3>
+          <p>An npm module for React Native to access Android's native SharedPreferences</p>
         </div>
       </div>
       <div class="item">
