--- a/src/_includes/home/work.html
+++ b/src/_includes/home/work.html
@@ -5,7 +5,7 @@
       {% if featuredProject == project.slug %}
       <div class="item">
         <div class="image">
-          <img data-original="/dist/images/{{project.icon}}" alt="{{ project.title }}" />
+          <img src="/dist/images/blank.png" data-original="/dist/images/{{project.icon}}" alt="{{ project.title }}" />
         </div>
         <div class="overlay">
           <div class="vertical-wrap">
