home page style

--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -462,6 +462,15 @@ body.page-index {
         }
       }
     }
+
+    .latest-post {
+      .desc {
+        margin-bottom: 10px;
+        a, span {
+          display: block;
+        }
+      }
+    }
   }
 }
 
