--- a/src/_assets/less/main.less
+++ b/src/_assets/less/main.less
@@ -25,6 +25,7 @@
 @import './home/portfolio';
 @import './blog';
 @import './highlight';
+@import './web-preview';
 
 * {
   box-sizing: border-box;
