--- a/src/_includes/home/work.html
+++ b/src/_includes/home/work.html
@@ -1,15 +1,16 @@
 <div class="featured-portfolio-items">
   <div class="container">
-    <div class="portfolio-row">
-      <div class="preview">
-        <img src="https://robinpowered.com/img/robin-android-ios-tablet-phone.png" />
-      </div>
+    <div class="portfolio-row alt">
       <div class="info">
         <h1>Robin Rooms</h1>
         <h2>Room schedules, right at your door</h2>
         <p>
-          I built the iPad and Android tablet applications. Customers mount these tablets outside of their conference rooms as interactive digital signage indicating the current status and daily schedule for the room.
+          I build the iPad and Android tablet applications. Customers mount these tablets outside of their conference rooms as interactive digital signage indicating the current status and daily schedule for the room.
         </p>
+        <a href="https://robinpowered.com/features/room-display" target="_blank">View Project</a>
+      </div>
+      <div class="preview">
+        <img src="/dist/images/projects/robin/rooms.jpg" />
       </div>
     </div>
     <div class="portfolio-row">
@@ -17,23 +18,24 @@
         <h1>Robin Dashboard</h1>
         <h2>An overview and management portal for the spaces in your office</h2>
         <p>
-          I built the iPad and Anroid tablet applications. Customers mount these tablets outside of their conference rooms as interactive digital signage indicating the current status and daily schedule for the room.
+          I build the Angular web application that customers use to manage their Robin powered offices. This ranages from a dashboard to browse the activity in the office to a management portal for managing spaces, calendars, and other resources.
         </p>
+        <a href="https://robinpowered.com" target="_blank">View Project</a>
       </div>
       <div class="preview">
         {% include web-preview.html image="/dist/images/projects/robin/dashboard.jpg" %}
       </div>
     </div>
-    <div class="portfolio-row">
-      <div class="preview">
-        {% include web-preview.html image="/dist/images/projects/tweetdrive/tweetdrive1.jpg" %}
-      </div>
+    <div class="portfolio-row alt">
       <div class="info">
         <h1>TweetDrive</h1>
         <h2>A game playe during the 2011 NFL Playoffs on NBCSports</h2>
         <p>
-          I built the iPad and Anroid tablet applications. Customers mount these tablets outside of their conference rooms as interactive digital signage indicating the current status and daily schedule for the room.
+          Tweetdrive was a trivia game hosted on NBCSports.com during the 2011 NFL playoffs. I built the web application that allows users to engage in the game through either twitter or the web application itself.
         </p>
+      </div>
+      <div class="preview">
+        {% include web-preview.html image="/dist/images/projects/tweetdrive/tweetdrive1.jpg" %}
       </div>
     </div>
   </div>
