bring back block-layout for more portfolio items

--- a/src/_assets/less/home.less
+++ b/src/_assets/less/home.less
@@ -338,11 +338,11 @@ body.page-index {
 
 .home section.projects {
   .portfolio-items {
+    display: none;
     .portfolio-row {
       .clearfix;
       .item {
         width: 20%;
-        background-color: orange;
         float:left;
 
         .image {
@@ -358,8 +358,8 @@ body.page-index {
 
 .home section.projects {
   background-color: #fff;
-  padding: 60px 0;
   .featured-portfolio-items {
+    padding: 60px 0;
     .portfolio-row {
       .row;
       margin-bottom: 100px;
@@ -396,6 +396,9 @@ body.page-index {
           float: right;
         }
       }
+    }
+    .more-items {
+      text-align: center;
     }
   }
 }
