--- a/src/_includes/home/work.html
+++ b/src/_includes/home/work.html
@@ -5,7 +5,7 @@
         <h1>Robin Rooms</h1>
         <h2>Room schedules, right at your door</h2>
         <p>
-          I build the iPad and Android tablet applications. Customers mount these tablets outside of their conference rooms as interactive digital signage indicating the current status and daily schedule for the room.
+          I build the iPad and Android tablet applications. Robin customers mount these tablets outside of their conference rooms as interactive digital signage indicating the current status and daily schedule for the room. Coworkers can start new meetings or check into existing meetings on their way into the room. If the room is busy, they can also find another space from the tablet.
         </p>
         <a href="https://robinpowered.com/features/room-display" target="_blank">View Project</a>
       </div>
@@ -31,7 +31,7 @@
         <h1>TweetDrive</h1>
         <h2>A game playe during the 2011 NFL Playoffs on NBCSports</h2>
         <p>
-          Tweetdrive was a trivia game hosted on NBCSports.com during the 2011 NFL playoffs. I built the web application that allows users to engage in the game through either twitter or the web application itself.
+          TweetDrive was a trivia game hosted on NBCSports.com during the 2011 NFL playoffs. I built the web application that allows users to engage in the game through either twitter or the web application itself. A series of questions are posted every quarter of the game and users can response with their predictions - "How many yards will Brady throw in the first quarter". The speed in which a user responds along with the accuracy of their prediction awards them pointage in terms of yards (out of 100). Every 100 yards is a touchdown. The players with the highest touchdowns (total yards) wins.
         </p>
       </div>
       <div class="preview">
